<resources>
    <string name="app_name">SalusLink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_user_name">Имя</string>
    <string name="default_user_surname">Фамилия</string>
    <string name="default_name_group">Название группы</string>
    <string name="default_number">+79009182391</string>
    <string name="default_status_online">В сети</string>
    <string name="default_direction_group">Раздел</string>
    <string name="settings_account">Аккаунт</string>
    <string name="settings_label_change_number">Нажмите чтобы изменить номер телефона</string>
    <string name="change_fio">Нажмите, чтобы изменить данные</string>
    <string name="settings_about_me">Заполните данные о себе</string>
    <string name="settings_about">О себе</string>
    <string name="additional_change_photo">Нажмите, чтобы изменить фотографию</string>
    <string name="change_photo">Выбрать фото</string>
    <string name="settings_menu_exit">Выйти</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="enter_button">Войти</string>
    <string name="registration">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="re_passport">Повторите пароль</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="title_group">Название</string>
    <string name="create_group">Создать группу</string>
    <string name="specialization_hint">Специализация</string>
    <string name="work_hint">Место работы</string>
    <string name="Further">Далее</string>
    <string name="registration_button">Регистрация</string>
    <string name="change_name_hint">Введите ваше имя</string>
    <string name="change_surname_hint">Введите вашу фамилию</string>
    <string name="accept_text">Принять</string>
    <string name="not_specified">Не указано</string>
    <string name="fill_in_all_fields">Заполните все поля!</string>
    <string name="change_specialization_hint">Специализация</string>
    <string name="change_education_hint">Образование</string>
    <string name="change_working_hint">Место работы</string>
    <string name="change_aboutTheTopic_hint">О теме</string>
    <string name="change_themes_hint">Тема</string>
    <string name="change_direction_hint">Раздел</string>
    <string name="change_experience_hint">Опыт работы</string>
    <string name="enter_data_settings">Введите данные в поля ниже:</string>
    <string name="about_me_text">Обо мне</string>
    <string name="about_group_text">О группе</string>
    <string name="default_profile_about">Не указано</string>
    <string name="search">Поиск</string>
    <string name="last_message">Последнее сообщение</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="delete_group">Удалить группу</string>
    <string name="change_group">Изменить данные группы</string>
    <string name="app_programmers">Приложение разработали:</string>
    <string name="irina">Александрова Ирина Андреевна</string>
    <string name="klava">Журавлёва Клавдия Алексеевна</string>
    <string name="about_education">Студентки ВШИТиAС САФУ\nНаправление:01.03.02\nгруппа:351012</string>
</resources>