<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AboutFragment">

    <TextView
        android:id="@+id/EnterData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin_top"
        android:text="@string/enter_data_settings"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_input_specialization"
        style="@style/app_edit_text_style"
        android:layout_marginTop="365dp"
        android:hint="@string/change_specialization_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterData" />

    <EditText
        android:id="@+id/settings_input_education"
        style="@style/app_edit_text_style"
        android:layout_width="match_parent"
        android:hint="@string/change_education_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_specialization" />

    <EditText
        android:id="@+id/settings_input_working"
        style="@style/app_edit_text_style"
        android:layout_width="match_parent"
        android:hint="@string/change_working_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_education" />

    <EditText
        android:id="@+id/settings_input_experience"
        style="@style/app_edit_text_style"
        android:layout_width="match_parent"
        android:hint="@string/change_experience_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_working" />

    <ImageButton
        android:id="@+id/ChangeAboutButton"
        style="@style/app_button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_input_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_experience" />

    <TextView
        android:id="@+id/ChangeAboutText"
        android:text="@string/accept_text"
        app:layout_constraintBottom_toBottomOf="@+id/ChangeAboutButton"
        app:layout_constraintEnd_toEndOf="@+id/ChangeAboutButton"
        app:layout_constraintStart_toStartOf="@+id/ChangeAboutButton"
        app:layout_constraintTop_toTopOf="@+id/ChangeAboutButton"
        style="@style/app_button_text_style" />


</androidx.constraintlayout.widget.ConstraintLayout>