<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ChangeNameFragment">

    <TextView
        android:id="@+id/EnterNSData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin_top"
        android:text="@string/enter_data_settings"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_input_name"
        style="@style/app_edit_text_style"
        android:hint="@string/change_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterNSData" />

    <EditText
        android:id="@+id/settings_input_surname"
        style="@style/app_edit_text_style"
        android:inputType="text"
        android:hint="@string/change_surname_hint"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/settings_input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin_top"/>

    <ImageButton
        android:id="@+id/ChangeSurnameNameButton"
        style="@style/app_button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_input_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_surname" />

    <TextView
        android:id="@+id/ChangeSurnameNameText"
        android:text="@string/accept_text"
        app:layout_constraintBottom_toBottomOf="@+id/ChangeSurnameNameButton"
        app:layout_constraintEnd_toEndOf="@+id/ChangeSurnameNameButton"
        app:layout_constraintStart_toStartOf="@+id/ChangeSurnameNameButton"
        app:layout_constraintTop_toTopOf="@+id/ChangeSurnameNameButton"
        style="@style/app_button_text_style" />

</androidx.constraintlayout.widget.ConstraintLayout>