<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.saluslink.viewModels.CreateGroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/create_group_image"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="20dp"
            android:src="@drawable/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/default_margin_top"/>

        <EditText
            android:id="@+id/title_group"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_group"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_group_image"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/direction_group"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/change_direction_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_group" />

        <EditText
            android:id="@+id/themes_group"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/change_themes_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/direction_group" />

        <EditText
            android:id="@+id/about_the_topic_group"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/change_aboutTheTopic_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/themes_group" />

        <Button
            android:id="@+id/create_group_button"
            style="@style/app_button_style"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/create_group"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_the_topic_group"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
